--- a/Exercises_PythonBasics.ipynb
+++ b/Exercises_PythonBasics.ipynb
@@ -85,13 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4c00cbf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Dave and I own 0 dogs.\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'Dave'\n",
-    "    dogs = 0\n",
+    "dogs = 0\n",
     "print('My name is', name, 'and I own', dogs, 'dogs.')"
    ]
   },
@@ -100,7 +108,7 @@
    "id": "5194f90d",
    "metadata": {},
    "source": [
-    "Describe here how you have addressed the issue:"
+    "Describe here how you have addressed the issue: name and dog are of the same category"
    ]
   },
   {
@@ -115,10 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cdc43557",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taco time\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"Taco \"\n",
     "b = \"time\"\n",
@@ -364,7 +380,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cf5d461b",
    "metadata": {},
@@ -391,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
